clusters/home/home-assistant/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-public
spec:
  hostnames:
  - home-assistant.blrobinson.uk
  parentRefs:
  - name: nginx-ingress
    namespace: ingress
    sectionName: https
  rules:
  - backendRefs:
    - name: home-assistant
      port: 8080
